<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <GVL Name="HMI" Id="{74764eea-f9f1-0a62-209b-313e6c5f9e7d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	StartOver	: BOOL;
	Stop		: BOOL;
	Pause		: BOOL;
	Resume		: BOOL;
	bzone0Stop	: BOOL;
	dsMoverControlFlags		:	MoverControlFlags;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>